Fixed styling issues for print/share buttons on firefox.

--- a/client/route-card-view/style.css
+++ b/client/route-card-view/style.css
@@ -68,7 +68,7 @@
 .Options .details-buttons 
 {
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
   right: 5px;
   margin: 9px 1px 5px 0;
 }
@@ -81,7 +81,6 @@ button.share-details
 
 button.print-details
 {
-  float: left;
   position: relative;
   right: 10px;
 }
@@ -89,8 +88,7 @@ button.print-details
 .Options .show-details,
 .Options .hide-details 
 {
-  float: right;
-  margin-bottom: 4px;
+  margin-bottom: 0;
 }
 
 .Options .RouteCard.expanded .simple .show-details,
